# p

./: .clang-format  .gitignore  CMakeLists.txt  README.md  uut_trace.vcd
.devcontainer/: Dockerfile
cmake/: FindABC.cmake  FindVerilatorPkg.cmake  SetupVenv.cmake
projects/: CMakeLists.txt  projects.cc
projects/common/: common.yaml.in  dp.sv  enc.sv  inc.sv  mux.sv
projects/conv/: CMakeLists.txt  cfg_asic_zeropad.yaml.in  tb.cc  tb.h  tb.sv
projects/conv/rtl/: CMakeLists.txt  cfg_pkg.svh  conv.sv  conv.yaml.in  conv_cntrl.sv  conv_cntrl_lb_asic.sv  conv_cntrl_lb_fpga.sv  conv_kernel.sv  conv_mask_zp.sv  conv_pkg.svh
projects/include/projects/: projects.h
projects/seqgen/: CMakeLists.txt  tb.cc  tb.h  tb.sv  tb_seqgen_case.yaml.in  tb_seqgen_fsm.yaml.in  tb_seqgen_pla.yaml.in
projects/seqgen/rtl/: CMakeLists.txt  cfg_pkg.svh.in  seqgen.sv  seqgen.yaml.in  seqgen_cntrl_case.sv  seqgen_cntrl_fsm.sv  seqgen_cntrl_pla.sv  seqgen_pkg.svh
py/: CMakeLists.txt  cfg.py.in  compile.py.in  rtl.py
rtl/: CMakeLists.txt
rtl/common/: CMakeLists.txt  common.yaml.in  common_pkg.svh  dp.sv  enc.sv  mux.sv
rtl/conv/: CMakeLists.txt  cfg_pkg.svh  conv.sv  conv.yaml.in  conv_asic_zeropad.yaml.in  conv_cntrl.sv  conv_cntrl_lb.sv  conv_cntrl_lb_asic.sv  conv_cntrl_lb_fpga.sv  conv_kernel.sv  conv_lb0.sv  conv_lb_asic.sv  conv_lb_fpga.sv  conv_lbx.sv  conv_lbx_asic.sv  conv_lbx_fpga.sv  conv_mask.sv  conv_mask_zp.sv  conv_pkg.svh  tb.cc  tb.sv
tb/: CMakeLists.txt  main.cc
tb/include/tb/: project.h  tb.h  vsupport.h
tb/src/: CMakeLists.txt  project.cc  runner.cc  test.cc  vsupport.cc
tb/sv/: asserts.svh  common.yaml.in  common_defs.svh  dff.sv  dffe.sv  dffr.sv  dffre.sv  flops.svh  generic_bram.sv  generic_sram.sv  tb_pkg.svh
test/: CMakeLists.txt  main.cc
